setting requirements for pkg dependencies

--- a/configure.ac
+++ b/configure.ac
@@ -19,6 +19,11 @@ AC_PROG_LIBTOOL
 # Checks for header files.
 AC_FUNC_ALLOCA
 AC_HEADER_STDC
+
+export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:$prefix/lib/pkgconfig
+PKG_CHECK_MODULES([HDF], [hdf])
+
+
 AC_CHECK_HEADERS([stdlib.h string.h])
 AC_CHECK_HEADERS(hdf/hdf.h stdarg.h ctype.h stdlib.h math.h)
 # Checks for typedefs, structures, and compiler characteristics.
