added DEFAULT_INCLUDES to cope with distcheck

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -8,6 +8,7 @@ pkg_include_HEADERS=bool.h\
 	getopt.h\
 	puCtools.h\
 	safety.h\
-	timemanip.h
+	timemanip.h\
+	config.h
 
 INSTALL=install -p # tells install to preserve timestamp
