removed autgenerated files in svn added check for own dependencies in configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -53,8 +53,14 @@ AC_CHECK_FUNCS([strdup])
 
 AC_LANG_POP(C)
 
+#making our own .pc file, checking that it is ok and forfilled
+AC_CONFIG_FILES(puctools.pc)
+AC_OUTPUT
+
+export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:.
+PKG_CHECK_MODULES([own_dependencies], [${PACKAGE_TARNAME}])
+
 AC_CONFIG_FILES([Makefile
-		puctools.pc
                 include/Makefile
                 src/Makefile])
 
