--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,12 +1,12 @@
-pkglib_LTLIBRARIES = libpuctools.la
+lib_LTLIBRARIES = libpuCtools.la
 
-libpuctools_la_SOURCES=getopt.c\
+libpuCtools_la_SOURCES=getopt.c\
 	puMath.c\
 	safety.c\
 	stringmanip.c\
 	timemanip.c
 
-libpuctools_la_LDFLAGS = ${VERSION_INFO}
+libpuCtools_la_LDFLAGS = ${VERSION_INFO}
 
 INSTALL=install -p # tells install to preserve timestamp
 DEFAULT_INCLUDES=-I${srcdir}/../include
