--- a/puctools.pc.in
+++ b/puctools.pc.in
@@ -4,7 +4,7 @@ libdir=@libdir@
 includedir=@includedir@
 
 Name: @PACKAGE_NAME@
-Description: The puCtools Library
+Description: C functions 
 Version: @VERSION@
-Libs: -L${libdir}/@PACKAGE_TARNAME@ -l@PACKAGE_TARNAME@
+Libs: -L${libdir} -l@PACKAGE_NAME@
 Cflags: -I${includedir}
