Import glob() and strlcpy() (needed by glob()) from OpenSSH.

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,9 +8,11 @@ lib_LTLIBRARIES = libpuCtools.la
 
 libpuCtools_la_SOURCES = \
 	getopt.c \
+	glob.c \
 	puMath.c \
 	safety.c \
 	stringmanip.c \
+	strlcpy.c \
 	timemanip.c
 
 libpuCtools_la_LDFLAGS = \
@@ -23,11 +25,13 @@ pkg_includedir = ${prefix}/include/puCtools
 
 pkg_include_HEADERS = \
 	bool.h \
+	glob.h \
 	porttypes.h \
 	puMath.h \
 	stringmanip.h \
 	getopt.h \
 	puCtools.h \
 	safety.h \
+	strlcpy.h \
 	timemanip.h
 
