Automatically generate correct pkg-config files. Note that pkg-config is fairly strict about syntax; it does not allow empty "Requires" lines, or "Requires" lines that end in a comma.

--- a/puCtools.pc.in
+++ b/puCtools.pc.in
@@ -6,5 +6,6 @@ includedir=@includedir@
 Name: puCtools
 Description: C functions 
 Version: @VERSION@
+# Requires: @puCtools_pc_requires@
 Libs: -L${libdir} -lpuCtools
 Cflags: -I${includedir}
