Fix Makefile.am to use includedir for installing includefiles. This make configure --includedir work.

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,7 +21,7 @@ libpuCtools_la_LDFLAGS = \
 libpuCtools_la_LIBADD = \
 	-lm
 
-pkg_includedir = ${prefix}/include/puCtools
+pkg_includedir = ${includedir}/puCtools
 
 pkg_include_HEADERS = \
 	bool.h \
