working version puCtools

--- a/configure.ac
+++ b/configure.ac
@@ -32,7 +32,7 @@ AC_LANG_POP([C++])
 METNO_ENABLE_CONDITIONAL([SHARED_LIBRARY], [shared])
 
 
-METNO_REQUIRE_PKG([MILOGGER], [milogger])
+METNO_REQUIRE_PKG([MILOGGER], [miLogger])
 
 
 AC_CONFIG_FILES([
