workaround for bdiana using static libs to build shared lib

--- a/puCtools.pc.in
+++ b/puCtools.pc.in
@@ -7,5 +7,5 @@ Name: puCtools
 Description: C functions 
 Version: @VERSION@
 Requires: miLogger >= 5.0.0
-Libs: -L${libdir} -lpuCtools
-Cflags: -I${includedir}
+Libs: -fPIC -L${libdir} -lpuCtools
+Cflags: -I${includedir} -fPIC
