--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-/debian/metlibs-puctools-dev.debhelper.log
-/debian/metlibs-puctools-dev.substvars
+/debian/*.debhelper.log
+/debian/*.substvars
 /debian/metlibs-puctools-dev
 /debian/files
+/debian/.debhelper/
+/debian/debhelper-build-stamp
+/debian/libmetlibs-puctools*-dbg/
+/debian/libmetlibs-puctools*/
+/debian/tmp/
+/obj-x86_64-linux-gnu/
